Update Travis CI configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,17 @@
 language: ruby
+
 rvm:
   - 1.9.2
   - 1.9.3
+  - 2.0.0
+  - 2.1.1
+  - 2.1.2
   - jruby-19mode
-  - rbx-19mode
+  - rbx-2
+  - ruby-head
+
+sudo: false
+
 matrix:
   allow_failures:
     - rvm: jruby-19mode
